fix: added the alignment on the sidebar, while making it fixed. added margin offset on app-content to compensate for the sidebar changes.

--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -2,6 +2,9 @@
   @apply flex flex-row;
 }
 
+.app-layout .ant-layout-content {
+  margin-left: 64px;
+}
 .app-content-loading {
   @apply flex justify-center items-center min-h-[calc(100vh-64px)];
 }
